--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Hello World! All your base are belong to us.</h1>
     <script src="app/workflow.js"></script>
   </body>
 </html>
