Added module>rules for css handling, style-loader, css-loader- and postcss-loader

--- a/app/index.html
+++ b/app/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Workflow Exercise</title>
   </head>
   <body>
     <h1>Hello World! All your base are belong to us.</h1>
-    <script src="app/workflow.js"></script>
+    <script src="workflow.js"></script>
   </body>
 </html>
