Almost completed styling Testimonials, high res img remaining

--- a/app/index.html
+++ b/app/index.html
@@ -104,7 +104,7 @@
         <div class="wrapper">
           <div class="row row--gutters">
             <div
-              class="col-12 col-md-4 col-md-4-larger col__b-margin-until-medium"
+              class="col-12 col-md-4 col-md-4-larger col--b-margin-until-medium"
             >
               <picture>
                 <source
@@ -249,9 +249,9 @@
 
       <div
         id="testimonials"
-        class="page-section page-section--testimonials page-section--no-b-padding-at-small"
+        class="page-section page-section--testimonials page-section--no-b-padding-at-medium"
       >
-        <div class="wrapper wrapper--no-padding-at-small">
+        <div class="wrapper wrapper--no-padding-at-medium">
           <h2 class="section-title section-title--blue">
             <img
               class="section-title__icon"
@@ -260,9 +260,9 @@
             <strong>Testimonials</strong>
           </h2>
           <div
-            class="row row--gutters-small row--stretch row--t-padding generic-content-container"
+            class="row row--gutters-small row--stretch-at-medium row--t-padding generic-content-container"
           >
-            <div class="col-md-4">
+            <div class="col-lg-4 col--no-x-padding-until-large">
               <div class="testimonial">
                 <div class="testimonial__photo">
                   <img src="assets/images/testimonial-jane.jpg" />
@@ -279,7 +279,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-lg-4 col--no-x-padding-until-large">
               <div class="testimonial">
                 <div class="testimonial__photo">
                   <img src="assets/images/testimonial-john.jpg" />
@@ -295,7 +295,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-lg-4 col--no-x-padding-until-large">
               <div class="testimonial testimonial--last">
                 <div class="testimonial__photo">
                   <img src="assets/images/testimonial-cat.jpg" />
