--- a/app/index.html
+++ b/app/index.html
@@ -265,7 +265,14 @@
             <div class="col-lg-4 col--no-x-padding-until-large">
               <div class="testimonial">
                 <div class="testimonial__photo">
-                  <img src="assets/images/testimonial-jane.jpg" />
+                  <img
+                    sizes="160px"
+                    srcset="
+                      assets/images/testimonial-jane.jpg    160w,
+                      assets/images/testimonial-jane-hi-dpi 320w
+                    "
+                    alt="Jane Doe"
+                  />
                 </div>
                 <h3 class="testimonial__title">Jane Doe</h3>
                 <h4 class="testimonial__subtitle">9 Time Escaper</h4>
@@ -282,7 +289,14 @@
             <div class="col-lg-4 col--no-x-padding-until-large">
               <div class="testimonial">
                 <div class="testimonial__photo">
-                  <img src="assets/images/testimonial-john.jpg" />
+                  <img
+                    sizes="160px"
+                    srcset="
+                      assets/images/testimonial-john.jpg        160w,
+                      assets/images/testimonial-john-hi-dpi.jpg 320w
+                    "
+                    alt="John Smith"
+                  />
                 </div>
                 <h3 class="testimonial__title">John Smith</h3>
                 <h4 class="testimonial__subtitle">4 Time Escaper</h4>
@@ -298,7 +312,14 @@
             <div class="col-lg-4 col--no-x-padding-until-large">
               <div class="testimonial testimonial--last">
                 <div class="testimonial__photo">
-                  <img src="assets/images/testimonial-cat.jpg" />
+                  <img
+                    sizes="160px"
+                    srcset="
+                      assets/images/testimonial-cat.jpg        160w,
+                      assets/images/testimonial-cat-hi-dpi.jpg 320w
+                    "
+                    alt="Cat McKitty"
+                  />
                 </div>
                 <h3 class="testimonial__title">Cat McKitty</h3>
                 <h4 class="testimonial__subtitle">6 Time Escaper</h4>
